<resources>
    <string name="app_name">Simple Weather</string>
    <string name="hint_name">Enter location</string>
    <string name="sw1_pressure">Pressure</string>
    <string name="sw1_humidity">Humidity</string>
    <string name="sw1_wind">Wind</string>
    <string name="sw1_precipitation">Precipitation</string>
    <string name="btn1_name">Show weather</string>
    <string name="txt_checkText">Check text</string>
    <string name="txt_temperature">Temperature</string>
    <string name="txt_wind">Wind</string>
    <string name="txt_humidity">Humidity</string>
    <string name="txt_pressure">Pressure</string>
    <string name="txt_temperatureUnit">\u00B0C</string>
    <string name="txt_windUnit">m/s</string>
    <string name="txt_humidityUnit">%</string>
    <string name="txt_pressureUnit"> mm Hg</string>
    <string name="txt_precipitation_0">Sunny</string>
    <string name="txt_precipitation_1">Rainy</string>
    <string name="txt_precipitation_2">Rain</string>
    <string name="txt_precipitation_3">Rain and snow</string>
    <string name="txt_precipitation_4">Snowy</string>
    <string name="txt_precipitation_5">Snow</string>
    <string name="txt_precipitation_6">Hail possible</string>
    <string name="txt_wind_0">east</string>
    <string name="txt_wind45">north-east</string>
    <string name="txt_wind90">north</string>
    <string name="txt_wind135">north-west</string>
    <string name="txt_wind180">west</string>
    <string name="txt_wind225">south-west</string>
    <string name="txt_wind270">south</string>
    <string name="txt_wind315">south-east</string>

</resources>
